feat: add details to token